hphp/hack/test/typecheck/fc_enum_4.php.exp
File "fc_enum_4.php", line 4, characters 12-15:
Enums must have int, string, or mixed type, not a bool (Typing[4024])
